@@ -3,7 +3,7 @@
 namespace dhope0000\LXDClient\Tools\Backups;
 
 use dhope0000\LXDClient\Model\Hosts\Backups\Instances\FetchInstanceBackups;
-use dhope0000\LXDClient\Tools\Hosts\Backups\Schedules\GetAllHostsSchedules;
+use dhope0000\LXDClient\Model\Hosts\Backups\Instances\Schedules\FetchBackupSchedules;
 use dhope0000\LXDClient\Tools\Instances\Backups\DeleteLocalBackup;
 use dhope0000\LXDClient\Objects\Host;
 use dhope0000\LXDClient\Constants\BackupStrategies;
@@ -11,15 +11,13 @@ use dhope0000\LXDClient\Model\Users\FetchUsers;
 
 class EnforceRetentionRules
 {
-    private $getAllHostsSchedules;
-
     public function __construct(
-        GetAllHostsSchedules $getAllHostsSchedules,
         FetchInstanceBackups $fetchInstanceBackups,
+        FetchBackupSchedules $fetchBackupSchedules,
         DeleteLocalBackup $deleteLocalBackup,
         FetchUsers $fetchUsers
     ) {
-        $this->getAllHostsSchedules = $getAllHostsSchedules;
+        $this->fetchBackupSchedules = $fetchBackupSchedules;
         $this->fetchInstanceBackups = $fetchInstanceBackups;
         $this->deleteLocalBackup = $deleteLocalBackup;
         $this->fetchUsers = $fetchUsers;
@@ -27,50 +25,41 @@ class EnforceRetentionRules
 
     public function enforce()
     {
-        $clustersAndStandalone = $this->getAllHostsSchedules->get();
+        $hostBackups = $this->fetchBackupSchedules->fetchActiveSchedsGroupedByHostId();
 
-        foreach ($clustersAndStandalone["clusters"] as $cluster) {
-            foreach ($cluster["members"] as $member) {
-                $this->addSchedulesToSchedule($member);
-            }
-        }
+        foreach ($hostBackups as $hostId => $scheduleItems) {
+            $adminUserId = $this->fetchUsers->fetchAnyAdminUserId();
+            foreach ($scheduleItems as $item) {
+                $instanceBackups  = [];
 
-        foreach ($clustersAndStandalone["standalone"]["members"] as $member) {
-            $this->addSchedulesToSchedule($member);
-        }
-    }
+                if ($item["strategyId"] == BackupStrategies::IMPORT_AND_DELETE) {
+                    $instanceBackups = $this->fetchInstanceBackups->fetchAll($hostId, $item["instance"]);
+                    foreach ($instanceBackups as $i => $b) {
+                        if ($b["dateDeleted"] !== null) {
+                            unset($instanceBackups[$i]);
+                        }
+                    }
+                    $instanceBackups = array_values($instanceBackups);
+                }
 
-    private function addSchedulesToSchedule($host)
-    {
-        $scheduleItems = $host->getCustomProp("schedules");
+                $backupCount = count($instanceBackups);
 
-        $adminUserId = $this->fetchUsers->fetchAnyAdminUserId();
+                if ($backupCount <= 1 || $backupCount < $item["scheduleRetention"]) {
+                    continue;
+                }
 
-        foreach ($scheduleItems as $item) {
-            $instanceBackups  = [];
+                $instanceBackups = array_reverse($instanceBackups);
 
-            if ($item["strategyId"] == BackupStrategies::IMPORT_AND_DELETE) {
-                $instanceBackups = $this->fetchInstanceBackups->fetchAll($item["hostId"], $item["instance"]);
-            }
+                if ((new \DateTime($instanceBackups[0]["dateCreated"])) > (new \DateTime($instanceBackups[$backupCount - 1]["dateCreated"]))) {
+                    throw new \Exception("Developer change fail - Backups in wrong order", 1);
+                }
 
+                $toRemoveCount = $backupCount - $item["scheduleRetention"];
 
-            $backupCount = count($instanceBackups);
-
-            if ($backupCount <= 1 || $backupCount < $item["scheduleRetention"]) {
-                continue;
-            }
-
-            $instanceBackups = array_reverse($instanceBackups);
-
-            if ((new \DateTime($instanceBackups[0]["dateCreated"])) > (new \DateTime($instanceBackups[$backupCount - 1]["dateCreated"]))) {
-                throw new \Exception("Developer change fail - Backups in wrong order", 1);
-            }
-
-            $toRemoveCount = $backupCount - $item["scheduleRetention"];
-
-            if ($item["strategyId"] == BackupStrategies::IMPORT_AND_DELETE) {
-                for ($i = 0; $i < $toRemoveCount; $i++) {
-                    $this->deleteLocalBackup->delete($adminUserId, $instanceBackups[$i]["id"]);
+                if ($item["strategyId"] == BackupStrategies::IMPORT_AND_DELETE) {
+                    for ($i = 0; $i < $toRemoveCount; $i++) {
+                        $this->deleteLocalBackup->delete($adminUserId, $instanceBackups[$i]["id"]);
+                    }
                 }
             }
         }
